# game_theory_feature_selection

./: .pre-commit-config.yaml  LICENSE  pyproject.toml  ruff.toml
results/: moleculeace_f_test_80.csv  moleculeace_hsic_lasso.csv  moleculeace_mutual_info_80.csv  moleculeace_rfecv.csv  moleculeace_select_from_model_l1.csv  moleculeace_shapley_effects.csv  moleculeace_variance_threshold.csv  moleculenet_correlation_threshold.csv  moleculenet_hsic_lasso.csv  moleculenet_none.csv  moleculenet_rfecv.csv  moleculenet_variance_threshold.csv  tdc_none.csv  tdc_rfecv.csv  tdc_select_from_model_l1.csv  tdc_shap.csv  tdc_variance_threshold.csv
results_80/: asap discovery_boruta.csv  asap discovery_correlation_threshold.csv  asap discovery_f_test_80.csv  asap discovery_hsic_lasso.csv  asap discovery_mutual_info_80.csv  asap discovery_rfecv.csv  asap discovery_sage.csv  asap discovery_select_from_model_l1.csv  asap discovery_shapley_effects.csv  asap discovery_variance_threshold.csv  expansionrx_boruta.csv  expansionrx_correlation_threshold.csv  expansionrx_f_test_80.csv  expansionrx_hsic_lasso.csv  expansionrx_mutual_info_80.csv  expansionrx_none.csv  expansionrx_permutation_importance.csv  expansionrx_rfecv.csv  expansionrx_sage.csv  expansionrx_select_from_model_l1.csv  expansionrx_shapley_effects.csv  expansionrx_variance_threshold.csv  moleculeace_boruta.csv  moleculeace_correlation_threshold.csv  moleculeace_permutation_importance.csv  moleculenet_boruta.csv  moleculenet_f_test_80.csv  moleculenet_mutual_info_80.csv  moleculenet_permutation_importance.csv  moleculenet_sage.csv  (+10 more)
(+6 files in other folders)
